--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -34,9 +34,11 @@ $(function () {
                 if(this.isValid){
                     $.post('/api/login',data,function(rtn){
                         console.log(rtn);
-                        // alert(rtn.admin);
-                        //
-                        // return location.assign('/');
+                        if (rtn['message']) {
+                            alert(rtn['message']);
+                        } else {
+                          return location.assign('/x/admin/manage_blogs');
+                        }
                     },'json');
                 }
             }
@@ -47,15 +49,6 @@ $(function () {
 </script>
 {% endblock %}
 
-{% block sidebarli %}
-<li>
-  <ul>
-    <li><a class="mui-btn mui-btn--raised" href="/x/admin/manage_blogs">博客管理</a></li>
-    <li><a class="mui-btn mui-btn--raised" href="/x/admin/manage_categeries">分类管理</a></li>
-    <li><a class="mui-btn mui-btn--raised" href="#">标签管理</a></li>
-  </ul>
-</li>
-{% endblock %}
 {% block content %}
     <div class="">
         <form id="vm" v-on:submit="submit" class="">
