--- a/www/templates/edit_blog.html
+++ b/www/templates/edit_blog.html
@@ -1,17 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="//cdn.muicss.com/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/static/css/mdeditor.css"/>
-
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
-    <script src="//cdn.muicss.com/mui-0.9.16/js/mui.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
-    <script type="text/javascript" src="/static/js/vue-datetimepicker.js" charset="UTF-8"></script> -->
 {% extends 'base.html' %}
 {% block beforehead %}
     <script>
@@ -87,13 +73,7 @@ $("textarea").scroll(function(){ $(this).css("height",$(this)[0].scrollHeight); 
 {% endblock %}
 
 {% block sidebarli %}
-<li>
-  <ul>
-    <li><a class="mui-btn mui-btn--raised" href="/x/admin/manage_blogs">博客管理</a></li>
-    <li><a class="mui-btn mui-btn--raised" href="/x/admin/manage_categeries">分类管理</a></li>
-    <li><a class="mui-btn mui-btn--raised" href="#">标签管理</a></li>
-  </ul>
-</li>
+{% include 'sidebar.html' %}
 {% endblock %}
 
 {% block content %}
