--- a/www/templates/edit_categery.html
+++ b/www/templates/edit_categery.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
+{% extends 'base.html' %}
+{% block beforehead %}
     <script>
     var
         ID = '{{ id }}',
@@ -46,21 +41,26 @@
     }
 
     </script>
-  </head>
-  <body>
+{% endblock %}
+
+{% block sidebarli %}
+{% include 'sidebar.html' %}
+{% endblock %}
+
+{% block content %}
+
    <div id="vm" class="">
        <form v-on:submit="submit" class="">
-           <div class=""></div>
-           <div class="">
-               <label class="">categery name</label>
-               <div class="">
-                   <input v-model="categery.name" name="name" type="text" placeholder="标题" class="">
-               </div>
+
+
+           <div class="mui-textfield mui-textfield--float-label">
+               <input v-model="categery.name" name="name" type="text" required>
+               <label>Categery Name</label>
            </div>
+
            <div class="">
-               <button type="submit" class="">保存</button>
+               <button type="submit" class="mui-btn mui-btn--raised mui-btn--primary">保存</button>
            </div>
        </form>
    </div>
-  </body>
-</html>
+{% endblock %}
