--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -60,7 +60,7 @@
         <div class="mui-container-fluid">
           <a class="sidedrawer-toggle js-show-sidedrawer">☰</a>
           <!-- <a class="sidedrawer-toggle mui--hidden-xs mui--hidden-sm js-hide-sidedrawer">☰</a> -->
-          <span class="mui--text-title mui--visible-xs-inline-block mui--visible-sm-inline-block">Brand.io</span>
+          <span class="mui--text-title">{% block page_title %}{% endblock %}</span>
         </div>
       </div>
     </header>
